style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

:root {
    --rvv: calc(1rem + 1vh + 1vw);

    --icon: calc(0.8*var(--rvv));

    --main-gap: calc(0.5*var(--rvv));

    --input-shadow: 1.0px 1.9px 1.9px rgba(0, 0, 0, 0.262);
    --focus-input-shadow: 2.0px 4.0px 4.0px rgba(0, 0, 0, 0.337);

    --shallow-shadow: 1.0px 1.9px 1.9px hsl(0deg 0% 0% / 0.47);
    --elevated-shadow: 2.0px 4.0px 4.0px hsl(0deg 0% 0% / 0.44);

    --button-bg: #ffc67c98;
    --button-text: #0d0d0deb;
}

.svg-dark-mode {
    filter: invert(81%) sepia(0%) saturate(10%) hue-rotate(166deg) brightness(100%) contrast(104%);
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/100-thin.otf');
    font-weight: 100;
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/200-extra-light.otf');
    font-weight: 200;
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/300-light.otf');
    font-weight: 300;
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/400-medium.otf');
    font-weight: 400;
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/500-regular.otf');
    font-weight: 500;
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/600-semi-bold.otf');
    font-weight: 600;
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/700-bold.otf');
    font-weight: 700;
}

@font-face {
    font-family: 'Interop';
    src: url('font/interop/otf/800-extra-bold.otf');
    font-weight: 800;
}

@font-face {
    font-family: 'Beon';
    src: url('font/beon/fonts/webfonts/Beon-Regular.ttf');
}

@font-face {
    font-family: 'Neoneon';
    src: url('font/neoneon/Neoneon.otf');
}

html,
body {
    box-sizing: border-box;
    max-width: 100vw;
    min-height: 100vh;
    font-family: 'Interop';
    font-weight: 500;
    color: var(--text);
}

body {
    display: flex;
    flex-direction: column;
    background-color: var(--bg);
}

header {
    position: relative;
    margin: calc(0.5*var(--rvv)) 0 ;
    display: flex;
}

.logo {
    cursor: pointer;
    font-family: 'Neoneon';
    color: var(--text);
    font-size: calc(0.9*var(--rvv));
    margin-left: calc(0.25*var(--rvv));
    margin-right: auto;
    grid-area: logo;
    min-width: calc(4*var(--rvv));
    padding: calc(0.2*var(--rvv)) 0 calc(0.2*var(--rvv)) calc(0.11*var(--rvv));
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.lead {
    text-shadow:
        0 0 1px #fff,
        0 0 2px rgba(255, 255, 255, 0.795),
        0 0 3px rgba(255, 255, 255, 0.499),
        0 0 4px rgb(255, 247, 0);
}

.lead.dark-logo {
    text-shadow:
        0 0 1px #fff,
        0 0 2px rgba(255, 255, 255, 0.795),
        0 0 3px rgba(255, 255, 255, 0.499),
        0 0 4px rgb(255, 247, 0),
        0 0 8px rgba(255, 247, 0, 0.714),
        0 0 10px rgba(255, 247, 0, 0.405),
        0 0 12px rgba(255, 247, 0, 0.236),
        0 0 15px rgba(255, 247, 0, 0.186);
}

.block {
    text-shadow:
        0 0 1px #fff,
        0 0 2px rgba(255, 255, 255, 0.795),
        0 0 3px rgba(255, 255, 255, 0.499),
        0 0 4px rgb(255, 145, 0);
}

.block.dark-logo {
    text-shadow:
        0 0 1px #fff,
        0 0 2px rgba(255, 255, 255, 0.795),
        0 0 3px rgba(255, 255, 255, 0.499),
        0 0 4px rgb(255, 145, 0),
        0 0 8px rgba(255, 145, 0, 0.714),
        0 0 10px rgba(255, 145, 0, 0.405),
        0 0 12px rgba(255, 145, 0, 0.236),
        0 0 15px rgba(255, 145, 0, 0.186);
}

.sports {
    text-shadow:
        0 0 1px #fff,
        0 0 2px rgba(255, 255, 255, 0.795),
        0 0 3px rgba(255, 255, 255, 0.499),
        0 0 4px rgb(255, 102, 0);
}

.sports.dark-logo {
    text-shadow:
        0 0 1px #fff,
        0 0 2px rgba(255, 255, 255, 0.795),
        0 0 3px rgba(255, 255, 255, 0.499),
        0 0 4px rgb(255, 102, 0),
        0 0 8px rgba(255, 102, 0, 0.714),
        0 0 10px rgba(255, 102, 0, 0.405),
        0 0 12px rgba(255, 102, 0, 0.236),
        0 0 15px rgba(255, 102, 0, 0.186);
}

.top-matter {
    margin: calc(0.6*var(--rvv)) calc(2*var(--rvv)) 0 auto;
    grid-area: top-matter;
    display: grid;
    grid-template-rows: var(--icon) var(--icon);
    grid-template-columns: var(--icon) var(--icon);
    column-gap: calc(0.5*var(--rvv));
    row-gap: calc(0.5*var(--rvv));
    grid-template-areas:
        "dark light"
        "search hamburger";
}

.dark,
.light {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
}

.dark {
    grid-area: dark;
}

.light {
    grid-area: light;
}

.dark,
.light,
.search-img,
.hamburger {
    padding: calc(0.5*var(--rvv));
}

.dark img,
.light img,
.search-img img,
.hamburger img {
    height: var(--icon);
}

.selected {
    border-radius: 50%;
    border: 0.5px solid var(--text);
}

.search-img {
    grid-area: search;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hamburger {
    grid-area: hamburger;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
}


main {
    margin: var(--main-gap) 0 0 calc(0.2*var(--rvv));
    flex: auto;
    display: flex;
    flex-direction: column;
    gap: var(--main-gap);
}

.content {
    margin: 0 calc(0.5*var(--rvv));
    flex: auto;
    display: flex;
    flex-direction: column;   
}

.top-info {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: calc(0.5*var(--rvv));
}

.title {
    width: 100%;
    font-size: calc(0.6*var(--rvv));
}

.author,
.date {
    font-size: calc(0.5*var(--rvv));
}

.author {
    cursor: pointer;
    margin-right: calc(var(--rvv));
}

.post-body {
    font-size: calc(0.4*var(--rvv));
    flex: auto;
    display: flex;
    flex-direction: column;
    gap: calc(0.5*var(--rvv));
    margin-bottom: calc(0.6*var(--rvv));
}

.bottom-info {
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
        "tags tags"
        "previous next";
}

.tag,
.recent-link {
    box-shadow: var(--shallow-shadow);
}

.search-input {
    box-shadow: var(--input-shadow);
}

.tags {
    grid-area: tags;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: calc(0.3*var(--rvv));
    margin-bottom: calc(0.25*var(--rvv));
}

.tag {
    cursor: pointer;
    font-size: calc(0.35*var(--rvv));
    display: flex;
    justify-content: center;
    align-items: center;
    height: calc(var(--rvv));
    /* border: 1px solid var(--text); */
    padding: 0 0.65rem 0.1rem 0.8rem;
    border-radius: 1.2rem;
    text-align: center;
    background-color: var(--button-bg);
    color: var(--button-text);
}

.previous,
.next {
    cursor: pointer;
    justify-self: center;
    height: calc(2*var(--rvv));
    width: calc(2*var(--rvv));
    display: flex;
    justify-content: center;
    align-items: center;
}

.previous img,
.next img {
    height: 50%;
}

.previous {
    grid-area: previous;
}

.next {
    grid-area: next;
}

.recent-posts {
    display: flex;
    flex-direction: column;
    margin: 0 calc(0.5*var(--rvv));
}

.recent-title {
    font-size: calc(0.6*var(--rvv));
    margin-bottom: calc(0.2*var(--rvv));
}

.recent-links {
    display: flex;
    flex-wrap: wrap;
    gap: calc(0.2*var(--rvv));
}

.recent-link {
    cursor: pointer;
    /* border: 1px solid var(--text); */
    border-radius: 1rem;
    padding: 0.6rem;
    width: 45%;
    background-color: var(--button-bg);
    color: var(--button-text)
}

.link-title {
    width: 100%;
    font-size: calc(0.4*var(--rvv));
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.link-description {
    width: 100%;
    font-style: italic;
    font-size: calc(0.35*var(--rvv));
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

footer {
    font-size: calc(0.3*var(--rvv));
    margin-top: calc(var(--rvv));
    height: 5vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* desktop styles: */
@media screen and (min-width: 750px) {
    header {
        margin-right: calc(0.5*var(--rvv));
    }

    @keyframes lead-flicker {
        0%, 18%, 22%, 25%, 53%, 57%, 100% {
            text-shadow:
            0 0 1px #fff,
            0 0 2px rgba(255, 255, 255, 0.795),
            0 0 3px rgba(255, 255, 255, 0.499),
            0 0 4px rgb(255, 247, 0),
            0 0 8px rgba(255, 247, 0, 0.714),
            0 0 10px rgba(255, 247, 0, 0.405),
            0 0 12px rgba(255, 247, 0, 0.236),
            0 0 15px rgba(255, 247, 0, 0.186);
        }
        20%, 24%, 55% {       
          text-shadow: none;
        }
    }
    
    .lead:hover {
        animation: lead-flicker 1s infinite alternate;    
    }
    
    @keyframes block-flicker {
        0%, 18%, 22%, 25%, 53%, 57%, 100% {
            text-shadow:
                0 0 1px #fff,
                0 0 2px rgba(255, 255, 255, 0.795),
                0 0 3px rgba(255, 255, 255, 0.499),
                0 0 4px rgb(255, 145, 0),
                0 0 8px rgba(255, 145, 0, 0.714),
                0 0 10px rgba(255, 145, 0, 0.405),
                0 0 12px rgba(255, 145, 0, 0.236),
                0 0 15px rgba(255, 145, 0, 0.186);
        }
        20%, 24%, 55% {       
          text-shadow: none;
        }
    }
    
    .block:hover {
        animation: block-flicker 1.5s infinite alternate;
    }
    
    @keyframes sports-flicker {
        0%, 18%, 22%, 25%, 53%, 57%, 100% {
            text-shadow:
                0 0 1px #fff,
                0 0 2px rgba(255, 255, 255, 0.795),
                0 0 3px rgba(255, 255, 255, 0.499),
                0 0 4px rgb(255, 102, 0),
                0 0 8px rgba(255, 102, 0, 0.714),
                0 0 10px rgba(255, 102, 0, 0.405),
                0 0 12px rgba(255, 102, 0, 0.236),
                0 0 15px rgba(255, 102, 0, 0.186);
        }
        20%, 24%, 55% {       
          text-shadow: none;
        }
    }
    
    .sports:hover {
        animation: sports-flicker 1.2s infinite alternate;
    }

    main {
        flex: auto;
        display: grid;
        grid-template-columns: 3fr 1fr;
        grid-template-rows: 1fr;
        grid-template-areas: "content recent";
    }
    .content {
        grid-area: content;
    }
    .recent-posts {
        grid-area: recent;
        width: 25vw;
    }
    .recent-links {
        gap: calc(0.4*var(--rvv));
    }
    .recent-link {
        width: 80%;
        max-width: 80%;
        padding: 0.7rem;
    }
    .tag,
    .recent-link,
    .light-icon,
    .dark,
    .light
    .hamburger,
    .previous,
    .next,
    .search-input {
        transition: transform 0.15s ease-in-out;
    }
    .tag:hover,
    .recent-link:hover,
    .light-icon:hover,
    .dark:hover,
    .light:hover,
    .hamburger:hover,
    .previous:hover,
    .next:hover {
        transform: scale(1.2);
    }

    .tag:hover,
    .recent-link:hover {
        transform: scale(1.05);
    }

    .tag:hover,
    .recent-link:hover {
        box-shadow: var(--elevated-shadow);
    }

    .search-input {
        transition: box-shadow 0.15s ease-in-out;
    }

    .search-input:focus,
    .search-input:hover {
        box-shadow: var(--focus-input-shadow);
        transform: scale(1.03);
    }
}

.hide {
    display: none;
}

